--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,43 +33,65 @@ android {
 }
 
 dependencies {
-
+//
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation 'androidx.core:core-ktx:1.3.2'
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'com.google.android.material:material:1.3.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//    testImplementation 'junit:junit:4.+'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+//
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation 'androidx.core:core-ktx:1.3.2'
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'com.google.android.material:material:1.3.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+//    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+//
+//    implementation 'androidx.fragment:fragment:1.3.0'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation "androidx.recyclerview:recyclerview:1.1.0"
+//    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+//    implementation "androidx.core:core-ktx:1.3.2"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//
+//    implementation 'io.reactivex.rxjava3:rxjava:3.0.10'
+//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+//
+//    implementation 'io.reactivex.rxjava3:rxjava:3.0.10'
+//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+//
+//    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation 'androidx.fragment:fragment:1.3.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'io.reactivex.rxjava3:rxjava:3.0.10'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.10'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-
-
 }
